# IronCircuit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blueprint.txt  build.ps1  ironcircuit_manager.py  pyproject.toml  requirements.txt  setup.py
src/cpp/: bindings.cpp  monitor.hpp
src/shield/: monitor.py
